# ESP32C6_Zigbee_Hub_V3

./: .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  readme.md  sdkconfig.defaults  sdkconfig.esp32c6  sdkconfig.esp32c6.old
device_profiles/: aqara_motion.json  ikea_bulb.json
include/: config.h
main/: CMakeLists.txt  ha_discovery.c  ha_discovery.h  idf_component.yml  main.c  mqtt.c  mqtt.h  ota_update.c  ota_update.h  watchdog.c  watchdog.h  web_dashboard.c  web_dashboard.h  wifi.c  wifi.h  zigbee.c  zigbee.h  zigbee_cluster_parser.c  zigbee_cluster_parser.h  zigbee_device_db.c  zigbee_device_db.h
main/bridge/: mqtt_bridge.c  mqtt_bridge.h
main/config/: config_manager.c  config_manager.h
main/core/: event_bus.c  event_bus.h
main/device/: device_manager.c  device_manager.h
main/network/: wifi_manager.c  wifi_manager.h
main/services/: web_server.c  web_server.h
main/system/: bootstrap.c  bootstrap.h
main/zigbee/: zigbee_core.c  zigbee_core.h
src/: CMakeLists.txt  ha_discovery.c  ha_discovery.h  idf_component.yml  main.c  mqtt.c  mqtt.h  wifi.c  wifi.h  zigbee.c  zigbee.h
