idf_component_register(
    SRCS
        "main.c"
        "config/config_manager.c"
        "core/event_bus.c"
        "device/device_manager.c"
        "network/wifi_manager.c"
        "bridge/mqtt_bridge.c"
        "services/web_server.c"
        "system/bootstrap.c"
        "zigbee/zigbee_core.c"

    INCLUDE_DIRS
        "."
        "config"
        "core"
        "device"
        "network"
        "bridge"
        "services"
        "system"
        "zigbee"

    REQUIRES
        esp_wifi
        esp_event
        esp_netif
        esp_coex
        nvs_flash
        mqtt
        esp_http_server
        espressif__esp-zigbee-lib
)
